--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           path: main
 
       - name: bring up the services network
-        run: cd kgai-provisioner && make create-network && make efk-dev-up
+        run: cd kgai-provisioner && make create-network
 
       - name: bring up the supporting services for tests
         run: cd kgai-provisioner && make orientdb-dev-up && make kafka-dev-up && make orientdb-create-db-dev
